Rewrite server code to our own

--- a/default.conf
+++ b/default.conf
@@ -1,13 +1,14 @@
 # Default server configuration
 server {
-    listen 8080;
+    listen 8084;
     server_name localhost;
     
-    client_max_body_size 10M;
+    client_max_body_size 10Mb;
     
+    error_page /error/default.html;
     error_page 404 /error/404.html;
     error_page 500 502 503 504 /error/50x.html;
-    
+
     # Default location
     location / {
         root /var/www/html;
@@ -15,7 +16,7 @@ server {
         allowed_methods GET POST DELETE;
         autoindex off;
     }
-    
+
     # Static files
     location /static {
         root /var/www/static;
@@ -40,14 +41,16 @@ server {
     
     # Redirect example
     location /old {
-        return /new;
+        redirect /new;
     }
 }
 
 # Additional server on different port
 server {
-    listen 8081;
+    listen 8085;
     server_name test.local;
+    client_max_body_size 5Mb;
+    error_page /error/default.html;
     
     location / {
         root /var/www/test;
