--- a/default.conf
+++ b/default.conf
@@ -10,7 +10,7 @@ server {
     
     # Default location
     location / {
-        root /var/www/html;
+        root /home/thivan-d/sgoinfre/var/www/html;
         index index.html;
         allowed_methods GET POST DELETE;
         autoindex off;
@@ -18,21 +18,21 @@ server {
     
     # Static files
     location /static {
-        root /var/www/static;
+        root /home/thivan-d/sgoinfre/var/www/static;
         allowed_methods GET;
         autoindex on;
     }
     
     # File uploads
     location /upload {
-        root /var/www/uploads;
-        allowed_methods POST;
+        root /home/thivan-d/sgoinfre/var/www/uploads;
+        allowed_methods GET POST;
         upload_store /var/www/uploads;
     }
     
     # CGI scripts
     location /cgi-bin {
-        root /var/www/cgi-bin;
+        root /home/thivan-d/sgoinfre/var/www/cgi-bin;
         allowed_methods GET POST;
         cgi_pass .php /usr/bin/php-cgi;
         cgi_pass .py /usr/bin/python3;
@@ -45,13 +45,13 @@ server {
 }
 
 # Additional server on different port
-server {
-    listen 8081;
-    server_name test.local;
+# server {
+#     listen 8081;
+#     server_name test.local;
     
-    location / {
-        root /var/www/test;
-        index index.html;
-        allowed_methods GET;
-    }
-}
+#     location / {
+#         root /home/thivan-d/sgoinfre/var/www/test;
+#         index index.html;
+#         allowed_methods GET;
+#     }
+# }
