Temp addition but dont use lool

--- a/default.conf
+++ b/default.conf
@@ -11,7 +11,7 @@ server {
 
     # Default location
     location / {
-        root /var/www/html;
+        root ~/Desktop/webserv/var/www/html;
         index index.html;
         allowed_methods GET POST DELETE;
         autoindex off;
