Update GET to handle multiple index files and cleaner code. Try to fix DELETE and UPLOAD, but failed badly -.-

--- a/default.conf
+++ b/default.conf
@@ -12,8 +12,8 @@ server {
     # Default location
     location / {
         root var/www/html;
-        index index.html;
-        allowed_methods GET POST DELETE;
+        index index.php index.html;
+        allowed_methods GET;
         autoindex off;
     }
 
@@ -26,8 +26,8 @@ server {
     
     # File uploads
     location /upload {
-        root var/www/uploads;
-        allowed_methods POST;
+        root var/www/html/uploads;
+        allowed_methods DELETE POST;
         upload_store var/www/uploads;
     }
     
