--- a/default.conf
+++ b/default.conf
@@ -10,7 +10,7 @@ server {
     
     # Default location
     location / {
-        root /home/thivan-d/sgoinfre/var/www/html;
+        root /var/www/html;
         index index.html;
         allowed_methods GET POST DELETE;
         autoindex off;
@@ -18,21 +18,21 @@ server {
     
     # Static files
     location /static {
-        root /home/thivan-d/sgoinfre/var/www/static;
+        root /var/www/static;
         allowed_methods GET;
         autoindex on;
     }
     
     # File uploads
     location /upload {
-        root /home/thivan-d/sgoinfre/var/www/uploads;
-        allowed_methods GET POST;
+        root /var/www/uploads;
+        allowed_methods POST;
         upload_store /var/www/uploads;
     }
     
-    # CGI scripts
-    location /cgi-bin {
-        root /home/thivan-d/sgoinfre/var/www/cgi-bin;
+    # CGI scripts - Updated paths
+    location /cgi-bin/ {
+        root ./;
         allowed_methods GET POST;
         cgi_pass .php /usr/bin/php-cgi;
         cgi_pass .py /usr/bin/python3;
@@ -45,13 +45,13 @@ server {
 }
 
 # Additional server on different port
-# server {
-#     listen 8081;
-#     server_name test.local;
+server {
+    listen 8081;
+    server_name test.local;
     
-#     location / {
-#         root /home/thivan-d/sgoinfre/var/www/test;
-#         index index.html;
-#         allowed_methods GET;
-#     }
-# }
+    location / {
+        root /var/www/test;
+        index index.html;
+        allowed_methods GET;
+    }
+}
