--- a/var/www/uploads/default.conf
+++ b/var/www/uploads/default.conf
@@ -1,38 +1,39 @@
 # Default server configuration
 server {
-    listen 8080;
+    listen 8084;
     server_name localhost;
     
-    client_max_body_size 10M;
+    client_max_body_size 10Mb;
     
+    error_page /error/default.html;
     error_page 404 /error/404.html;
     error_page 500 502 503 504 /error/50x.html;
-    
+
     # Default location
     location / {
-        root ./var/www/html/;
+        root var/www/html;
         index index.html;
         allowed_methods GET POST DELETE;
         autoindex off;
     }
-    
+
     # Static files
     location /static {
-        root /var/www/static;
+        root var/www/static;
         allowed_methods GET;
         autoindex on;
     }
     
     # File uploads
-    location ./upload {
-        root ./var/www/uploads;
-        allowed_methods GET POST;
-        upload_store /var/www/uploads;
+    location /upload {
+        root var/www/uploads;
+        allowed_methods POST;
+        upload_store var/www/uploads;
     }
     
-    # CGI scripts - Updated paths
-    location /cgi-bin/ {
-        root ./;
+    # CGI scripts
+    location /cgi-bin {
+        root var/www/cgi-bin;
         allowed_methods GET POST;
         cgi_pass .php /usr/bin/php-cgi;
         cgi_pass .py /usr/bin/python3;
@@ -40,17 +41,19 @@ server {
     
     # Redirect example
     location /old {
-        return /new;
+        redirect /new;
     }
 }
 
 # Additional server on different port
 server {
-    listen 8081;
+    listen 8085;
     server_name test.local;
+    client_max_body_size 5Mb;
+    error_page /error/default.html;
     
     location / {
-        root /var/www/test;
+        root var/www/test;
         index index.html;
         allowed_methods GET;
     }
