--- a/default.conf
+++ b/default.conf
@@ -33,7 +33,7 @@ server {
 
     # CGI scripts
     location /cgi-bin {
-        root var/www/cgi-bin;
+        root /sgoinfre/thivan-d/puinhoop/var/www/cgi-bin;
         allowed_methods GET POST;
         cgi_pass .php /usr/bin/php-cgi;
         cgi_pass .py /usr/bin/python3;
