Update the code to allow multiple servers at a single port

--- a/default.conf
+++ b/default.conf
@@ -45,10 +45,10 @@ server {
     }
 }
 
-# Additional server on different port
+# Additional server on the same port
 server {
-    listen 8081;
-    server_name test.local;
+    listen 8080;
+    server_name temp.host.sameport.yay;
     client_max_body_size 5Mb;
     error_page /error/default.html;
 
@@ -56,5 +56,22 @@ server {
         root var/www/test;
         index index.html;
         allowed_methods GET;
+    }
+}
+
+# Another server on a different port
+server {
+    listen 8081;
+    server_name another.host.differentport.yay;
+
+    client_max_body_size 10Mb;
+
+    error_page /error/default.html;
+
+    location / {
+        root var/www/another;
+        index index.html;
+        allowed_methods GET POST;
+        autoindex on;
     }
 }
