--- a/default.conf
+++ b/default.conf
@@ -5,9 +5,9 @@ server {
 
     client_max_body_size 3Mb;
 
-    error_page /error/default.html;
-    error_page 404 /error/404.html;
-    error_page 500 502 503 504 /error/50x.html;
+    # error_page /error/default.html;
+    # error_page 404 /error/404.html;
+    # error_page 500 502 503 504 /error/50x.html;
 
     # Default location
     location / {
@@ -50,7 +50,7 @@ server {
     listen 8080;
     server_name temp.host.sameport.yay;
     client_max_body_size 5Mb;
-    error_page /error/default.html;
+    # error_page /error/default.html;
 
     location / {
         root var/www/test;
@@ -66,7 +66,7 @@ server {
 
     client_max_body_size 10Mb;
 
-    error_page /error/default.html;
+    # error_page /error/default.html;
 
     location / {
         root var/www/another;
