Add yoogle.com showcase

--- a/default.conf
+++ b/default.conf
@@ -48,13 +48,13 @@ server {
 # Additional server on the same port
 server {
     listen 8080;
-    server_name temp.host.sameport.yay;
+    server_name yoogle.com;
     client_max_body_size 5Mb;
     # error_page /error/default.html;
 
     location / {
-        root var/www/test;
-        index index.html;
+        root var/www/html;
+        index test.html;
         allowed_methods GET;
     }
 }
