Temp files which segfault - gotta live the life yk

--- a/default.conf
+++ b/default.conf
@@ -34,9 +34,9 @@ server {
     # CGI scripts
     location /cgi-bin {
         root var/www/cgi-bin;
+        index index.php index.html;
         allowed_methods GET POST;
-        cgi_pass .php /usr/bin/php-cgi;
-        cgi_pass .py /usr/bin/python3;
+        cgi enable;
     }
 
     # Redirect example
