Add GCI to the mix

--- a/default.conf
+++ b/default.conf
@@ -37,6 +37,7 @@ server {
         index index.php index.html;
         allowed_methods GET POST;
         cgi enable;
+        cgi_timeout 5s;
     }
 
     # Redirect example
