Update server to work with sessions; update cgi communication

--- a/default.conf
+++ b/default.conf
@@ -31,18 +31,46 @@ server {
         upload_store var/www/uploads;
     }
 
-    # CGI scripts
-    location /cgi-bin {
-        root var/www/cgi-bin;
-        index index.php index.html;
-        allowed_methods GET POST;
-        cgi enable;
-        cgi_timeout 5s;
-    }
-
     # Redirect example
     location /old {
         redirect /new;
+    }
+}
+
+# The cgi api server
+server {
+    listen 8080;
+    server_name api.localhost;
+
+    root var/www/cgi-bin;
+
+    cgi enable;
+    cgi_timeout 10s;
+
+    allowed_methods GET; # To test single files in the root directory
+
+    location /user {
+        allowed_methods GET;
+        index fetchUser.py;
+        cgi enable;
+    }
+
+    location /debug {
+        allowed_methods GET;
+        index debug.py;
+        cgi enable;
+    }
+
+    location /error {
+        allowed_methods GET;
+        index error.py;
+        cgi enable;
+    }
+
+    location /timeout {
+        allowed_methods GET;
+        index timeout.py;
+        cgi enable;
     }
 }
 
