--- a/default.conf
+++ b/default.conf
@@ -5,6 +5,8 @@ server {
 
     client_max_body_size 3Mb;
 
+    allowed_methods GET;
+
     # error_page /error/default.html;
     # error_page 404 /error/404.html;
     # error_page 500 502 503 504 /error/50x.html;
