Bring back to life the error page rule & add define and include rules into the config file

--- a/default.conf
+++ b/default.conf
@@ -1,3 +1,31 @@
+# Define the error pages to be used across the server configuration
+define error_pages {
+    error_page 400 var/www/html/error/400.html;
+    error_page 401 var/www/html/error/401.html;
+    error_page 403 var/www/html/error/403.html;
+    error_page 404 var/www/html/error/404.html;
+    error_page 405 var/www/html/error/405.html;
+    error_page 406 var/www/html/error/406.html;
+    error_page 407 var/www/html/error/407.html;
+    error_page 408 var/www/html/error/408.html;
+    error_page 409 var/www/html/error/409.html;
+    error_page 410 var/www/html/error/410.html;
+    error_page 411 var/www/html/error/411.html;
+    error_page 412 var/www/html/error/412.html;
+    error_page 413 var/www/html/error/413.html;
+    error_page 414 var/www/html/error/414.html;
+    error_page 415 var/www/html/error/415.html;
+    error_page 416 var/www/html/error/416.html;
+    error_page 417 var/www/html/error/417.html;
+    error_page 500 var/www/html/error/500.html;
+    error_page 501 var/www/html/error/501.html;
+    error_page 502 var/www/html/error/502.html;
+    error_page 503 var/www/html/error/503.html;
+    error_page 504 var/www/html/error/504.html;
+    error_page 505 var/www/html/error/505.html;
+    error_page 511 var/www/html/error/511.html;
+}
+
 # Default server configuration
 server {
     listen 8080;
@@ -7,9 +35,8 @@ server {
 
     allowed_methods GET;
 
-    # error_page /error/default.html;
-    # error_page 404 /error/404.html;
-    # error_page 500 502 503 504 /error/50x.html;
+    # Use the defined error pages
+    include error_pages;
 
     # Default location
     location / {
@@ -37,6 +64,10 @@ server {
     location /old {
         redirect /new;
     }
+
+    location /new {
+        root var/www/html;
+    }
 }
 
 # The cgi api server
@@ -48,6 +79,8 @@ server {
 
     cgi enable;
     cgi_timeout 10s;
+
+    include error_pages;
 
     allowed_methods GET; # To test single files in the root directory
 
@@ -81,7 +114,6 @@ server {
     listen 8080;
     server_name yoogle.com;
     client_max_body_size 5Mb;
-    # error_page /error/default.html;
 
     location / {
         root var/www/html;
@@ -96,8 +128,6 @@ server {
     server_name another.host.differentport.yay;
 
     client_max_body_size 10Mb;
-
-    # error_page /error/default.html;
 
     location / {
         root var/www/another;
