--- a/default.conf
+++ b/default.conf
@@ -26,6 +26,43 @@ define error_pages {
     error_page 511 var/www/html/error/511.html;
 }
 
+define cgiEndpoints {
+    location /cgi {
+        root var/www/cgi-bin;
+        allowed_methods GET;
+        index index.py;
+        cgi enable;
+    }
+
+    location /cgi/user {
+        root var/www/cgi-bin/user;
+        allowed_methods GET;
+        index fetchUser.py;
+        cgi enable;
+    }
+
+    location /cgi/debug {
+        root var/www/cgi-bin/debug;
+        allowed_methods GET;
+        index debug.py;
+        cgi enable;
+    }
+
+    location /cgi/error {
+        root var/www/cgi-bin/error;
+        allowed_methods GET;
+        index error.py;
+        cgi enable;
+    }
+
+    location /cgi/timeout {
+        root var/www/cgi-bin/timeout;
+        allowed_methods GET;
+        index timeout.py;
+        cgi enable;
+    }
+}
+
 # Default server configuration
 server {
     listen 8080;
@@ -37,6 +74,7 @@ server {
 
     # Use the defined error pages
     include error_pages;
+    include cgiEndpoints;
 
     # Default location
     location / {
@@ -75,38 +113,13 @@ server {
     listen 8080;
     server_name api.localhost;
 
-    root var/www/cgi-bin;
-
     # cgi enable;
     cgi_timeout 10s;
 
     include error_pages;
+    include cgiEndpoints;
 
     allowed_methods GET; # To test single files in the root directory
-
-    location /user {
-        allowed_methods GET;
-        index fetchUser.py;
-        cgi enable;
-    }
-
-    location /debug {
-        allowed_methods GET;
-        index debug.py;
-        cgi enable;
-    }
-
-    location /error {
-        allowed_methods GET;
-        index error.py;
-        cgi enable;
-    }
-
-    location /timeout {
-        allowed_methods GET;
-        index timeout.py;
-        cgi enable;
-    }
 }
 
 # Additional server on the same port
