--- a/webtester/testconf.conf
+++ b/webtester/testconf.conf
@@ -1,52 +1,151 @@
+# Define the error pages to be used across the server configuration
+# define error_pages {
+#     error_page 400 webtester/var/www/html/error/400.html;
+#     error_page 401 webtester/var/www/html/error/401.html;
+#     error_page 403 webtester/var/www/html/error/403.html;
+#     error_page 404 webtester/var/www/html/error/404.html;
+#     error_page 405 webtester/var/www/html/error/405.html;
+#     error_page 406 webtester/var/www/html/error/406.html;
+#     error_page 407 webtester/var/www/html/error/407.html;
+#     error_page 408 webtester/var/www/html/error/408.html;
+#     error_page 409 webtester/var/www/html/error/409.html;
+#     error_page 410 webtester/var/www/html/error/410.html;
+#     error_page 411 webtester/var/www/html/error/411.html;
+#     error_page 412 webtester/var/www/html/error/412.html;
+#     error_page 413 webtester/var/www/html/error/413.html;
+#     error_page 414 webtester/var/www/html/error/414.html;
+#     error_page 415 webtester/var/www/html/error/415.html;
+#     error_page 416 webtester/var/www/html/error/416.html;
+#     error_page 417 webtester/var/www/html/error/417.html;
+#     error_page 500 webtester/var/www/html/error/500.html;
+#     error_page 501 webtester/var/www/html/error/501.html;
+#     error_page 502 webtester/var/www/html/error/502.html;
+#     error_page 503 webtester/var/www/html/error/503.html;
+#     error_page 504 webtester/var/www/html/error/504.html;
+#     error_page 505 webtester/var/www/html/error/505.html;
+#     error_page 511 webtester/var/www/html/error/511.html;
+#     error_page * others;
+# }
+
+define cgiEndpoints {
+    location /cgi {
+        root webtester/var/www/cgi-bin;
+        allowed_methods GET;
+        index index.py;
+        cgi enable;
+    }
+
+    location /cgi/user {
+        root webtester/var/www/cgi-bin/user;
+        allowed_methods GET;
+        index fetchUser.py;
+        cgi enable;
+    }
+
+    location /cgi/debug {
+        root webtester/var/www/cgi-bin/debug;
+        allowed_methods GET;
+        index debug.py;
+        cgi enable;
+    }
+
+    location /cgi/error {
+        root webtester/var/www/cgi-bin/error;
+        allowed_methods GET;
+        index error.py;
+        cgi enable;
+    }
+
+    location /cgi/timeout {
+        root webtester/var/www/cgi-bin/timeout;
+        allowed_methods GET;
+        index timeout.py;
+        cgi enable;
+    }
+}
+
+# Default server configuration
 server {
     listen 8080;
-    server_name hellothere.com;
+    server_name localhost;
 
-    location /get {
-        root vartest/www/get;
-        index index.html;
+    client_max_body_size 3Mb;
+
+    allowed_methods GET;
+    cgi_extention .py .php;
+
+    # Use the defined error pages
+    include cgiEndpoints;
+
+    # Default location
+    location /home {
+        root webtester/var/www/html;
+        index index.php index.html;
+        allowed_methods GET;
+        autoindex off;
+    }
+
+    # Static files
+    location /static {
+        root webtester/var/www/static;
+        allowed_methods GET;
+        autoindex on;
+    }
+
+    # File uploads
+    location /upload {
+        root webtester/var/www/html/uploads;
+        allowed_methods DELETE POST;
+        upload_store webtester/var/www/uploads;
+    }    
+    
+    # Redirect example
+    location /old {
+        redirect /new;
+    }
+
+    location /new {
+        root webtester/var/www/html;
+    }
+}
+
+# The cgi api server
+server {
+    listen 8080;
+    server_name api.localhost;
+
+    # cgi enable;
+    cgi_timeout 10s;
+
+    include cgiEndpoints;
+
+    allowed_methods GET; # To test single files in the root directory
+}
+
+# Additional server on the same port
+server {
+    listen 8080;
+    server_name yoogle.com;
+    client_max_body_size 5Mb;
+
+    location / {
+        root webtester/var/www/html;
+        index test.html;
         allowed_methods GET;
     }
+}
 
-    location /get/hi/ho/lets/go {
-        root vartest/www/get;
-        index index.html;
-        allowed_methods GET;
-    }
+# Another server on a different port
+server {
+    listen 8081;
+    server_name another.host.differentport.yay;
 
-    location /post/new {
-        root vartest/www/post;
-        index index.html;
-        allowed_methods GET;
-    }
+    client_max_body_size 10Mb;
 
-    location /post/create {
-        root vartest/www/post;
+    location / {
+        root webtester/var/www/another;
         index index.html;
-        allowed_methods POST;
-    }
-
-    location /put/1/edit {
-        root vartest/www/put;
-        index index.html;
-        allowed_methods GET;
-    }
-
-    location /put/1/update {
-        root vartest/www/put;
-        index index.html;
-        allowed_methods POST;
-    }
-
-    location /delete/1 {
-        root vartest/www/delete;
-        index index.html;
-        allowed_methods GET;
-    }
-
-    location /delete/1/confirm {
-        root vartest/www/delete;
-        index index.html;
-        allowed_methods POST;
+        allowed_methods GET POST;
+        autoindex on;
     }
 }
