--- a/default.conf
+++ b/default.conf
@@ -3,7 +3,7 @@ define error_pages {
     error_page 400 var/www/html/error/400.html;
     error_page 401 var/www/html/error/401.html;
     error_page 403 var/www/html/error/403.html;
-    # error_page 404 var/www/html/error/404.html;
+    error_page 404 var/www/html/error/404.html;
     error_page 405 var/www/html/error/405.html;
     error_page 406 var/www/html/error/406.html;
     error_page 407 var/www/html/error/407.html;
@@ -24,7 +24,6 @@ define error_pages {
     error_page 504 var/www/html/error/504.html;
     error_page 505 var/www/html/error/505.html;
     error_page 511 var/www/html/error/511.html;
-    error_page * others;
 }
 
 define cgiEndpoints {
@@ -44,7 +43,7 @@ define cgiEndpoints {
 
     location /cgi/debug {
         root var/www/cgi-bin/debug;
-        allowed_methods GET;
+        allowed_methods GET POST;
         index debug.py;
         cgi enable;
     }
