--- a/webtester/testconf.conf
+++ b/webtester/testconf.conf
@@ -85,6 +85,12 @@ server {
         autoindex off;
     }
 
+    # Uploads location
+    location /view_uploaded {
+        root webtester/var/www/uploads;
+        allowed_methods GET;
+    }
+
     # Static files
     location /static {
         root webtester/var/www/static;
