Update the config parser

--- a/default.conf
+++ b/default.conf
@@ -1,31 +1,4 @@
 # Define the error pages to be used across the server configuration
-define error_pages {
-    error_page 400 var/www/html/error/400.html;
-    error_page 401 var/www/html/error/401.html;
-    error_page 403 var/www/html/error/403.html;
-    error_page 404 var/www/html/error/404.html;
-    error_page 405 var/www/html/error/405.html;
-    error_page 406 var/www/html/error/406.html;
-    error_page 407 var/www/html/error/407.html;
-    error_page 408 var/www/html/error/408.html;
-    error_page 409 var/www/html/error/409.html;
-    error_page 410 var/www/html/error/410.html;
-    error_page 411 var/www/html/error/411.html;
-    error_page 412 var/www/html/error/412.html;
-    error_page 413 var/www/html/error/413.html;
-    error_page 414 var/www/html/error/414.html;
-    error_page 415 var/www/html/error/415.html;
-    error_page 416 var/www/html/error/416.html;
-    error_page 417 var/www/html/error/417.html;
-    error_page 500 var/www/html/error/500.html;
-    error_page 501 var/www/html/error/501.html;
-    error_page 502 var/www/html/error/502.html;
-    error_page 503 var/www/html/error/503.html;
-    error_page 504 var/www/html/error/504.html;
-    error_page 505 var/www/html/error/505.html;
-    error_page 511 var/www/html/error/511.html;
-}
-
 define cgiEndpoints {
     location /cgi {
         root var/www/cgi-bin;
@@ -59,6 +32,7 @@ define cgiEndpoints {
         root var/www/cgi-bin/timeout;
         allowed_methods GET;
         index timeout.py;
+        cgi_timeout 5s;
         cgi enable;
     }
 }
@@ -71,10 +45,10 @@ server {
     client_max_body_size 3Mb;
 
     allowed_methods GET;
-    cgi_extention .py .php;
+    cgi_extension .py .php;
 
     # Use the defined error pages
-    include error_pages;
+    include default_errorpages;
     include cgiEndpoints;
 
     # Default location
@@ -101,11 +75,15 @@ server {
 
     # Redirect example
     location /old {
-        redirect /new;
+        return 301 /new;
     }
 
     location /new {
         root var/www/html;
+    }
+
+    location /tellmesomething {
+        return 200 "This is a test response for /tellmesomething\n";
     }
 }
 
@@ -117,7 +95,7 @@ server {
     # cgi enable;
     cgi_timeout 10s;
 
-    include error_pages;
+    include default_errorpages;
     include cgiEndpoints;
 
     allowed_methods GET; # To test single files in the root directory
