Make sure the correct server respond to the request

--- a/default.conf
+++ b/default.conf
@@ -1,4 +1,3 @@
-# Define the error pages to be used across the server configuration
 define cgiEndpoints {
     location /cgi {
         root var/www/cgi-bin;
@@ -39,7 +38,7 @@ define cgiEndpoints {
 
 # Default server configuration
 server {
-    listen 8080;
+    listen 8080 default;
     server_name localhost;
 
     client_max_body_size 3Mb;
