--- a/default.conf
+++ b/default.conf
@@ -1,34 +1,34 @@
 define cgiEndpoints {
     location /cgi {
-        root var/www/cgi-bin;
+        alias var/www/cgi-bin;
         allowed_methods GET;
         index index.py;
         cgi enable;
     }
 
     location /cgi/user {
-        root var/www/cgi-bin/user;
+        alias var/www/cgi-bin/user;
         allowed_methods GET;
         index fetchUser.py;
         cgi enable;
     }
 
     location /cgi/debug {
-        root var/www/cgi-bin/debug;
+        alias var/www/cgi-bin/debug;
         allowed_methods GET POST;
         index debug.py;
         cgi enable;
     }
 
     location /cgi/error {
-        root var/www/cgi-bin/error;
+        alias var/www/cgi-bin/error;
         allowed_methods GET;
         index error.py;
         cgi enable;
     }
 
     location /cgi/timeout {
-        root var/www/cgi-bin/timeout;
+        alias var/www/cgi-bin/timeout;
         allowed_methods GET;
         index timeout.py;
         cgi_timeout 5s;
@@ -52,7 +52,7 @@ server {
 
     # Default location
     location / {
-        root var/www/html;
+        alias var/www/html;
         index index.php index.html;
         allowed_methods GET;
         autoindex off;
@@ -60,14 +60,14 @@ server {
 
     # Static files
     location /static {
-        root var/www/static;
+        alias var/www/static;
         allowed_methods GET;
         autoindex on;
     }
 
     # File uploads
     location /upload {
-        root var/www/html/uploads;
+        alias var/www/html/uploads;
         allowed_methods DELETE POST;
         upload_store var/www/uploads;
     }
@@ -77,12 +77,18 @@ server {
         return 301 /new;
     }
 
+    # And just another redirect cuz why not
     location /new {
-        root var/www/html;
+        return 301 /;
     }
 
     location /tellmesomething {
         return 200 "This is a test response for /tellmesomething\n";
+    }
+
+    location /some/long/real/long/path {
+        root var/www/html;
+        index index.html;
     }
 }
 
@@ -107,7 +113,7 @@ server {
     client_max_body_size 5Mb;
 
     location / {
-        root var/www/html;
+        alias var/www/html;
         index test.html;
         allowed_methods GET;
     }
@@ -121,9 +127,20 @@ server {
     client_max_body_size 10Mb;
 
     location / {
-        root var/www/another;
+        alias var/www/another;
         index index.html;
         allowed_methods GET POST;
         autoindex on;
+    }
+}
+
+server {
+    listen 8082 default;
+    server_name localhost;
+
+    root var/www/html;
+
+    location /error {
+        return 500 "This is a test error response for /error\n";
     }
 }
