--- a/default.conf
+++ b/default.conf
@@ -144,3 +144,11 @@ server {
         return 500 "This is a test error response for /error\n";
     }
 }
+
+# Tea mentioned ^^
+server {
+    listen 8083 default;
+    server_name localhost;
+
+    return 418 "Teapot!!!!";
+}
