Fix delete issues

--- a/default.conf
+++ b/default.conf
@@ -1,7 +1,7 @@
 define cgiEndpoints {
     location /cgi {
         alias var/www/cgi-bin;
-        allowed_methods GET;
+        allowed_methods GET DELETE;
         index index.py;
         cgi enable;
     }
