--- a/default.conf
+++ b/default.conf
@@ -1,5 +1,6 @@
 define cgiEndpoints {
     location /cgi {
+        cgi_timeout 300s;
         alias var/www/cgi-bin;
         allowed_methods GET DELETE;
         index index.py;
@@ -145,7 +146,7 @@ server {
     }
 }
 
-# Tea mentioned ^^
+# Tea mentioned ^^ ; listen
 server {
     listen 8083 default;
     server_name localhost;
