Fix issue with CGI when closing the connection

--- a/default.conf
+++ b/default.conf
@@ -153,3 +153,10 @@ server {
 
     return 418 "Teapot!!!!";
 }
+
+server {
+    listen 8084 default;
+    server_name localhost;
+
+    return 200 "Siege tester go brr";
+}
