--- a/default.conf
+++ b/default.conf
@@ -2,7 +2,7 @@ define cgiEndpoints {
     location /cgi {
         cgi_timeout 300s;
         alias var/www/cgi-bin;
-        allowed_methods GET DELETE;
+        allowed_methods GET DELETE POST;
         index index.py;
         cgi enable;
     }
