--- a/default.conf
+++ b/default.conf
@@ -37,126 +37,130 @@ define cgiEndpoints {
     }
 }
 
-# Default server configuration
-server {
-    listen 8080 default;
-    server_name localhost;
+http {
+    client_header_timeout 10s;
+    client_body_timeout 10s;
+    keepalive_timeout 1m;
 
-    client_max_body_size 3Mb;
+    server {
+        listen 8080 default;
+        server_name localhost;
 
-    allowed_methods GET;
-    cgi_extension .py .php;
+    client_max_body_size 3Mb;   
 
-    # Use the defined error pages
-    include default_errorpages;
-    include cgiEndpoints;
-
-    # Default location
-    location / {
-        alias var/www/html;
-        index index.php index.html;
         allowed_methods GET;
-        autoindex off;
+        cgi_extension .py .php;
+
+        # Use the defined error pages
+        include default_errorpages;
+        include cgiEndpoints;
+
+        # Default location
+        location / {
+            alias var/www/html;
+            index index.php index.html;
+            allowed_methods GET;
+            autoindex off;
+        }
+
+        # Static files
+        location /static {
+            alias var/www/static;
+            allowed_methods GET;
+            autoindex on;
+        }
+
+        # File uploads
+        location /upload {
+            alias var/www/html/uploads;
+            allowed_methods DELETE POST;
+            upload_store var/www/uploads;
+        }
+
+        # Redirect example
+        location /old {
+            return 301 /new;
+        }
+
+        # And just another redirect cuz why not
+        location /new {
+            return 301 /;
+        }
+
+        location /tellmesomething {
+            return 200 "This is a test response for /tellmesomething\n";
+        }
+
+        location /some/long/real/long/path {
+            root var/www/html;
+            index index.html;
+        }
     }
 
-    # Static files
-    location /static {
-        alias var/www/static;
-        allowed_methods GET;
-        autoindex on;
+    # The cgi api server
+    server {
+        listen 8080;
+        server_name api.localhost;
+
+        # cgi enable;
+        cgi_timeout 10s;
+
+        include default_errorpages;
+        include cgiEndpoints;
+
+        allowed_methods GET; # To test single files in the root directory
     }
 
-    # File uploads
-    location /upload {
-        alias var/www/html/uploads;
-        allowed_methods DELETE POST;
-        upload_store var/www/uploads;
+    # Additional server on the same port
+    server {
+        listen 8080;
+        server_name yoogle.com;
+        client_max_body_size 5Mb;
+
+        location / {
+            alias var/www/html;
+            index test.html;
+            allowed_methods GET;
+        }
     }
 
-    # Redirect example
-    location /old {
-        return 301 /new;
+    server {
+        listen 8081;
+        server_name another.host.differentport.yay;
+
+        client_max_body_size 10Mb;
+
+        location / {
+            alias var/www/another;
+            index index.html;
+            allowed_methods GET POST;
+            autoindex on;
+        }
     }
 
-    # And just another redirect cuz why not
-    location /new {
-        return 301 /;
-    }
+    server {
+        listen 8082 default;
+        server_name localhost;
 
-    location /tellmesomething {
-        return 200 "This is a test response for /tellmesomething\n";
-    }
-
-    location /some/long/real/long/path {
         root var/www/html;
-        index index.html;
+
+        location /error {
+            return 500 "This is a test error response for /error\n";
+        }
     }
-}
 
-# The cgi api server
-server {
-    listen 8080;
-    server_name api.localhost;
+    # Tea mentioned ^^ ; listen
+    server {
+        listen 8083 default;
+        server_name localhost;
 
-    # cgi enable;
-    cgi_timeout 10s;
-
-    include default_errorpages;
-    include cgiEndpoints;
-
-    allowed_methods GET; # To test single files in the root directory
-}
-
-# Additional server on the same port
-server {
-    listen 8080;
-    server_name yoogle.com;
-    client_max_body_size 5Mb;
-
-    location / {
-        alias var/www/html;
-        index test.html;
-        allowed_methods GET;
+        return 418 "Teapot!!!!";
     }
-}
 
-# Another server on a different port
-server {
-    listen 8081;
-    server_name another.host.differentport.yay;
+    server {
+        listen 8084 default;
+        server_name localhost;
 
-    client_max_body_size 10Mb;
-
-    location / {
-        alias var/www/another;
-        index index.html;
-        allowed_methods GET POST;
-        autoindex on;
+        return 200 "Siege tester go brr";
     }
-}
-
-server {
-    listen 8082 default;
-    server_name localhost;
-
-    root var/www/html;
-
-    location /error {
-        return 500 "This is a test error response for /error\n";
-    }
-}
-
-# Tea mentioned ^^ ; listen
-server {
-    listen 8083 default;
-    server_name localhost;
-
-    return 418 "Teapot!!!!";
-}
-
-server {
-    listen 8084 default;
-    server_name localhost;
-
-    return 200 "Siege tester go brr";
 }
