--- a/subjectTester/youpiConf.conf
+++ b/subjectTester/youpiConf.conf
@@ -36,6 +36,10 @@ define cgiEndpoints {
         cgi enable;
     }
 }
+http{
+    client_header_timeout 5s;
+    client_body_timeout 5s;
+    keepalive_timeout 15s;
 
 # Default server configuration
 server {
@@ -48,7 +52,7 @@ server {
     cgi_extension .bla;
 
     # Use the defined error pages
-    include default_errorpages;
+    # include default_errorpages;
     include cgiEndpoints;
 
     # Default location
@@ -170,4 +174,5 @@ server {
     server_name localhost;
 
     return 418 "Teapot!!!!";
+}
 }
