Update file handling

--- a/default.conf
+++ b/default.conf
@@ -7,18 +7,12 @@ define cgiEndpoints {
         cgi enable;
     }
 
-    location /cgi/user {
-        alias var/www/cgi-bin/user;
-        allowed_methods GET;
-        index fetchUser.py;
-        cgi enable;
-    }
-
     location /cgi/debug {
         alias var/www/cgi-bin/debug;
         allowed_methods GET POST;
         index debug.py;
         cgi enable;
+        upload_store var/www/uploads;
     }
 
     location /cgi/error {
@@ -46,7 +40,7 @@ http {
         listen 8080 default;
         server_name localhost;
 
-    client_max_body_size 3Mb;   
+        client_max_body_size 3Mb;   
 
         allowed_methods GET;
         cgi_extension .py .php;
@@ -71,10 +65,10 @@ http {
         }
 
         # File uploads
-        location /upload {
-            alias var/www/html/uploads;
-            allowed_methods DELETE POST;
+        location /files {
+            root var/www/filestuff;
             upload_store var/www/uploads;
+            allowed_methods GET DELETE POST;
         }
 
         # Redirect example
@@ -88,7 +82,7 @@ http {
         }
 
         location /tellmesomething {
-            return 200 "This is a test response for /tellmesomething\n";
+            return 200 "This is a test response for /tellmesomething";
         }
 
         location /some/long/real/long/path {
