--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,13 @@
 define cgiEndpoints {
+    location /cgi/bigaf {
+        root var/www/cgi-bin/bigaf;
+        allowed_methods GET POST;
+        cgi_timeout 900s;
+        index fucker.py;
+        cgi enable;
+    }
+
     location /cgi {
-        cgi_timeout 300s;
         alias var/www/cgi-bin;
         allowed_methods GET DELETE POST;
         index index.py;
