--- a/subjectTester/youpiConf.conf
+++ b/subjectTester/youpiConf.conf
@@ -78,7 +78,10 @@ server {
         alias subjectTester/YoupiBanane;
         index youpi.bad_extension;
         allowed_methods GET;
+        client_max_body_size 2Gb;
+        cgi_timeout 999s;
     }
+
 
 
     # Static files
