--- a/subjectTester/youpiConf.conf
+++ b/subjectTester/youpiConf.conf
@@ -37,9 +37,9 @@ define cgiEndpoints {
     }
 }
 http{
-    client_header_timeout 5s;
-    client_body_timeout 5s;
-    keepalive_timeout 15s;
+    client_header_timeout 50s;
+    client_body_timeout 50s;
+    keepalive_timeout 5s;
 
 # Default server configuration
 server {
@@ -69,7 +69,9 @@ server {
     }
     
     location /post_body {
-        client_max_body_size 100kb;
+        alias subjectTester/YoupiBanane;
+        index postthingy.bla;
+        client_max_body_size 100;
         allowed_methods POST;
         upload_store subjectTester/uploads;
     }
