--- a/default.conf
+++ b/default.conf
@@ -47,7 +47,7 @@ http {
         listen 8080 default;
         server_name localhost;
 
-        client_max_body_size 3Mb;   
+        client_max_body_size 1;   
 
         allowed_methods GET;
         cgi_extension .py .php;
